Scroll Sidebar on small screens corrected

--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -20,6 +20,8 @@ img {
 }
 @media screen and (max-width: 770px) {
 	.collapse {
+        max-height: calc(100vh - 60px);
         backdrop-filter: blur(20px);
+        overflow-y: auto;
     }
 }
